linux (4.4.1-1) UNRELEASED; urgency=medium

  * New upstream stable update:
    https://www.kernel.org/pub/linux/kernel/v4.x/ChangeLog-4.4.1

  [Bo Yang]
  * Drop unneeded patches

 -- Bo Yang <yangbo@linuxdeepin.com>  Sun, 14 Feb 2016 11:17:50 +0800

linux (4.3.5-1) unstable; urgency=medium

  * New upstream stable update:
    https://www.kernel.org/pub/linux/kernel/v4.x/ChangeLog-4.3.4
    - ACPI: Use correct IRQ when uninstalling ACPI interrupt handler
    - ACPI: Using correct irq when waiting for events
    - ACPI / PM: Fix incorrect wakeup IRQ setting during suspend-to-idle
    - tpm, tpm_tis: fix tpm_tis ACPI detection issue with TPM 2.0
    - toshiba_acpi: Initialize hotkey_event_type variable
    - USB: cdc_acm: Ignore Infineon Flash Loader utility
    - USB: serial: Another Infineon flash loader USB ID
    - usb-storage: Fix scsi-sd failure "Invalid field in cdb" for USB adapter
      JMicron
    - USB: cp210x: Remove CP2110 ID from compatibility list
    - USB: add quirk for devices with broken LPM
    - USB: whci-hcd: add check for dma mapping error
    - usb: gadget: pxa27x: fix suspend callback
    - USB: host: ohci-at91: fix a crash in ohci_hcd_at91_overcurrent_irq
    - usb: musb: USB_TI_CPPI41_DMA requires dmaengine support
    - usb: core : hub: Fix BOS 'NULL pointer' kernel panic
    - usb: Use the USB_SS_MULT() macro to decode burst multiplier for log message
    - pppoe: fix memory corruption in padt work structure
    - gre6: allow to update all parameters via rtnl
    - atl1c: Improve driver not to do order 4 GFP_ATOMIC allocation
    - ipv6: keep existing flags when setting IFA_F_OPTIMISTIC
    - vxlan: fix incorrect RCO bit in VXLAN header
    - sctp: use the same clock as if sock source timestamps were on
    - sctp: update the netstamp_needed counter when copying sockets
    - sctp: also copy sk_tsflags when copying the socket
    - net: cdc_mbim: add "NDP to end" quirk for Huawei E3372