@@ -5,6 +5,7 @@ linux (4.4.1-1) UNRELEASED; urgency=medium
 
   [Bo Yang]
   * Drop unneeded patches
+  * aufs: Update support patches to aufs4.x-rcN-20151123
 
  -- Bo Yang <yangbo@linuxdeepin.com>  Sun, 14 Feb 2016 11:17:50 +0800
 
